# Lukhas_PWM

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AUDIT_SUMMARY.md  CLAUDE.md  CONSOLIDATION_SAFETY_REPORT.md  DEMO_QUICKSTART.md  DETAILED_INTEGRATION_PLAN.md  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_READY_SUMMARY.md  LICENSE  LUKHAS_MODULE_STANDARDIZATION_PLAN.md  MODULE_STANDARDIZATION_QUICKSTART.md  PHASE_IMPLEMENTATION_STATUS.md  PWM_CURRENT_STATUS_REPORT.md  PWM_FUNCTIONAL_ANALYSIS_REPORT.json  PWM_OPERATIONAL_STATUS_REPORT.md  PWM_SECURITY_COMPLIANCE_EXPANSION_PLAN.md  PWM_SECURITY_COMPLIANCE_GAP_ANALYSIS.py  PWM_WORKSPACE_STATUS_ANALYSIS.py  PWM_WORKSPACE_STATUS_REPORT.json  RADICAL_SIMPLIFICATION_PLAN.md  README.md  REORGANIZATION_TEST_REPORT.md  ROADMAP.md  VISION.md  WORKSPACE_COMPLETION_SUMMARY.md  docker-compose.yml  helix_memory_store.jsonl  lukhas_memory_folds.db  lukhas_pwm_config.yaml  package-lock.json  package.json  pwm_deep_analysis.py  pyproject.toml  requirements.txt  start_demo.sh  test_comprehensive_governance.py  (+2 more)
 _context_/: QRG.md  Symbolic_Auth.md  plan.md
.githooks/: pre-commit
.github/: ENTERPRISE_TRANSFORMATION_COMPLETE.md  ORCHESTRATOR_ISSUE_RESOLVED.md  ORCHESTRATOR_STRATEGY.md  WORKFLOW_CLEANUP.md  copilot-instructions.md  dependabot.yml
.pwm_cleanup_archive/: AGENT.md  COMMERCIAL_MODULE_PLAN.md  CONSOLIDATION_IMPORT_MAP.md  DEEP_ARCHITECTURE_ANALYSIS.md  DIRECTORY_CLEANUP_PLAN.md  Dockerfile  ENTERPRISE_FINAL_REPORT.md  ENTERPRISE_STATUS_REPORT.md  IMPORT_FIX_REPORT.json  IMPORT_FIX_SUMMARY.md  LUKHAS_ARCHITECTURE_FINAL.md  PROFESSIONAL_DELIVERY_REPORT.md  (+9 more)
rust/event_bus/: Cargo.toml
rust/event_bus/src/: lib.rs
rust/event_bus/tests/: integration.rs
(+3961 files in other folders)
