[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lukhas-agi"
version = "0.2.0"
description = "LUKHAS AGI - Enterprise Artificial General Intelligence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LUKHAS Team", email = "team@lukhas.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "openai>=1.78.0",
    "transformers>=4.51.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "grpcio>=1.60.0",
    "sqlalchemy>=2.0.38",
    "pytest>=8.3.5",
    "rich>=13.9.4",
    "streamlit>=1.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lukhas*"]

[project.entry-points."lukhas.plugins"]
three_laws = "lukhas.ethics.policy_engines.examples.three_laws:ThreeLawsPolicy"

[tool.black]
line-length = 88
target-version = ['py38']
